--- a/AbortController/index.html
+++ b/AbortController/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>new AbortController test</title>
+    <title>new AbortController() 학습</title>
   </head>
   <body>
     <h2>fetch</h2>
