코드 스타일통일화

--- a/AbortController/index.html
+++ b/AbortController/index.html
@@ -14,6 +14,6 @@
     <button class="axiosRequestButton" onclick="axiosRequest()">요청</button>
     <button class="axiosCancelButton" onclick="axiosCancel()">취소</button>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/index.js" defer></script>
   </body>
 </html>
