--- a/IntersectionObserver/index.html
+++ b/IntersectionObserver/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div class="wrap"></div>
-    <script defer src="./js/index.js"></script>
+    <script src="./js/index.js" defer></script>
   </body>
 </html>
